--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home Page</title>
-</head>
-<body>
-  <h1>Hello, World!</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home Page</title>
+  </head>
+  <body>
+    <h1>Hello, World!</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut qui nisi rem,
+      quos unde voluptate deserunt officia ducimus? Consequatur deleniti
+      consequuntur voluptate ea itaque voluptates nostrum aliquid vero natus
+      tenetur!
+    </p>
+  </body>
 </html>
